Kubernetes/Code/LetsEncryptCert/ingress2.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-rules
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
   - host: argocd.krazyworks.shop
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80 
  tls:
  - hosts:
    - argocd.krazyworks.shop
    # reference secret for production TLS certificate
    secretName: argocd-letsencrypt-certificate
